# dbclient

./: Cargo.toml  Makefile  README.md  tests.compose.yml  tests.config.toml  tests.dockerfile
src/: cli.rs  main.rs
src/config/: mod.rs
src/dbclient/: mod.rs  query_builder.rs
src/dbclient/dummy/: mod.rs
src/dbclient/redis/: integration_tests.rs  mod.rs
src/ui/: command.rs  editor.rs  mod.rs
src/ui/screens/: main.rs  mod.rs
src/ui/screens/query/: mod.rs  query_result_widget.rs  query_widget.rs
src/ui2/: editor.rs  mod.rs  ui_mode.rs
src/ui2/pages/: main.rs  mod.rs  query.rs
src/ui2/pages/widgets/: connections_list.rs  db_objects.rs  mod.rs  query_line.rs  query_result.rs  user_mode.rs
src/ui2/pipe/: mod.rs
src/ui2/tree/: render.rs
src/ui3/: connections_list.rs  db_objects.rs  editor_popup.rs  editor_simple_input.rs  mod.rs  model.rs  query_input.rs  query_result.rs
